Final Pybank Submission with Output.txt file working

--- a/Pybank/main.ipynb
+++ b/Pybank/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "welcome-nightlife",
+   "id": "cutting-employment",
    "metadata": {},
    "source": [
     "* The total number of months included in the dataset.\n",
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "opposite-missile",
+   "execution_count": 1,
+   "id": "assigned-exercise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "sonic-affect",
+   "execution_count": 2,
+   "id": "emerging-candy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,27 +46,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "published-remove",
+   "execution_count": 3,
+   "id": "scheduled-survey",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize the variables \n",
     "total_months = 0\n",
     "total_net = 0\n",
-    "#average = 0\n",
+    "average_change = 0\n",
     "\n",
     "monthly_change = []\n",
     "net_change_list = []\n",
     "\n",
     "greatest_increase = [\"\", 0]\n",
-    "greatest_decrease = [\"\", 99999999999]"
+    "greatest_decrease = [\"\", 99999999999]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "signal-generation",
+   "execution_count": 4,
+   "id": "proved-arrival",
    "metadata": {},
    "outputs": [
     {
@@ -75,20 +75,10 @@
      "text": [
       "Total Months: 86\n",
       "Total: $38382578\n",
-      "Average Change: -2315.1176470588234\n",
-      "['Feb-2012', 1926159]\n",
-      "['Sep-2013', -2196167]\n"
+      "Average Change: -2315.12\n",
+      "Greatest Increase: ['Feb-2012', 1926159]\n",
+      "Greatest Decrease: ['Sep-2013', -2196167]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('output.txt')"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -122,20 +112,58 @@
     "            greatest_decrease[0] = row[0]\n",
     "            greatest_decrease[1] = net_change\n",
     "\n",
-    "\n",
+    "average_change = sum(net_change_list)/len(net_change_list)\n",
+    "            \n",
+    "            \n",
     "print(f\"Total Months: {total_months}\")\n",
     "print(f\"Total: ${total_net}\")\n",
-    "print(f\"Average Change: {sum(net_change_list)/len(net_change_list)}\")\n",
-    "print (greatest_increase) \n",
-    "print (greatest_decrease)\n",
+    "print(f\"Average Change: {round(average_change,2)}\")\n",
+    "print(f\"Greatest Increase: {greatest_increase}\")\n",
+    "print(f\"Greatest Decrease: {greatest_decrease}\")\n",
     "\n",
-    "csvpath_output\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "numerous-istanbul",
+   "execution_count": 5,
+   "id": "stainless-locator",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(csvpath_output, 'w') as output_file:\n",
+    "    output_file.write(\"Financial Analysis\\n\")\n",
+    "    output_file.write(\"-----------------------------------\\n\")\n",
+    "    output_file.write(f\"Total Months: {total_months}\\n\")\n",
+    "    output_file.write(f\"Total Revenue:${total_net}\\n\")\n",
+    "    output_file.write(f\"Average Change: ${round(average_change,2)}\\n\")\n",
+    "    output_file.write(f\"Greatest Increase in Revenue: {greatest_increase}\\n\")\n",
+    "    output_file.write(f\"Greatest Decrease in Revenue: {greatest_decrease}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cleared-ireland",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "532869"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "handled-medication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "every-vision",
+   "id": "healthy-placement",
    "metadata": {},
    "outputs": [],
    "source": []
